Introduced dynamic viewport units and resolved a mobile scrollbar bug

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,7 @@
 .layout {
+  overflow: auto;
+  height: 100dvh;
+  width: 100dvw;
   padding: var(--space-l) var(--space-m);
 }
 
@@ -15,8 +18,8 @@
     position: fixed;
     top: 0;
     left: 0;
-    height: 100%;
-    width: 100%;
+    height: 100dvh;
+    width: 100dvw;
     max-width: unset;
     padding: 0;
     margin: 0;
@@ -29,7 +32,7 @@
     gap: var(--space-xxl);
     height: 36.5rem;
     width: 48rem;
-    margin: calc(50vh - 19.625rem) auto;
+    margin: calc(50dvh - 19.625rem) auto;
   }
 
   .layout__item {
