--- a/src/components/preloader.scss
+++ b/src/components/preloader.scss
@@ -1,10 +1,10 @@
 .preloader {
   opacity: 0;
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 50dvh;
+  left: 50dvw;
   translate: -50% calc(-50% + var(--space-xxl));
-  width: 50%;
+  width: 50dvw;
   max-width: 10rem;
   transition:
     opacity calc(var(--motion-step) * 6) linear,
